Test/Landin/Knot1.dfy.expect
Knot1.dfy(13,9): Error: To prevent the creation of non-terminating functions, storing functions with read effects into memory is disallowed
1 resolution/type errors detected in Knot1.dfy
